kube-prometheus/manifests/ep.yaml
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    k8s-app: kube-controller-manager
  name: kube-controller-manager
  namespace: kube-system
subsets:
- addresses:
  - ip: 172.16.32.51
  - ip: 172.16.32.52
  - ip: 172.16.32.53
  ports:
  - name: http-metrics
    port: 10252
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  labels:
    k8s-app: kube-scheduler
  name: kube-scheduler
  namespace: kube-system
subsets:
- addresses:
  - ip: 172.16.32.51
  - ip: 172.16.32.52
  - ip: 172.16.32.53
  ports:
  - name: http-metrics
    port: 10251
    protocol: TCP
