kube-prometheus/manifests/etcd.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd-k8s
  namespace: kube-system
  labels:
    k8s-app: etcd
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: port
      port: 2379
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: etcd-k8s
  namespace: kube-system
  labels:
    k8s-app: etcd
subsets:
  - addresses:
      - ip: 172.16.32.51
        nodeName: vm-test-k8s-m1
      - ip: 172.16.32.52
        nodeName: vm-test-k8s-m2
      - ip: 172.16.32.53
        nodeName: vm-test-k8s-m3
    ports:
      - name: port
        port: 2379
        protocol: TCP
